# SOLOL_front

./: .env.example  .gitignore  architecture.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
flutter_cpp/: CMakeLists.txt  README.md  aruco_calibration.cpp  aruco_calibration.h  sam_ffi.dart  sam_inference.cpp  sam_inference.h
ios/Runner/: Info.plist
lib/: main.dart  nav.dart  theme.dart
lib/auth/: auth_manager.dart  supabase_auth_manager.dart
lib/components/: app_sidebar.dart  gradient_header.dart  medical_questionnaire_form.dart  modern_button.dart  podology_ai_chat.dart  scan_cta.dart  section_card.dart
lib/l10n/: app_localizations.dart
lib/models/: app_notification.dart  auth_user.dart  chat_message.dart  chat_thread.dart  foot_metrics.dart  foot_scan.dart  medical_questionnaire.dart  session.dart  user.dart
lib/screens/: add_patient_page.dart  add_session_page.dart  chat_page.dart  complete_profile_page.dart  edit_patient_page.dart  help_page.dart  history_page.dart  home_page.dart  login_page.dart  notifications_page.dart  patient_detail_page.dart  patients_page.dart  podiatrist_profile_page.dart  scan_page.dart  scan_result_page.dart  session_detail_page.dart  signup_page.dart
lib/services/: chat_service.dart  measurement_service.dart  patient_service.dart  pdf_report_service.dart  pdf_service.dart  podology_ai_service.dart  session_service.dart
lib/state/: app_settings.dart  notification_center.dart  podiatrist_profile.dart
lib/supabase/: config.toml  database.types.ts  pending_migrations.sql  supabase_config.dart  supabase_policies.sql  supabase_sample_data.sql  supabase_tables.sql
lib/supabase/functions/antopic_chat/: index.ts
web/: index.html
